@@ -22,7 +22,9 @@ Version 0.3p
  - Currently, the PLAYER can get pregnant from bunnies, equines, lizards and cats.
 * Added the first part of the Burrows questline.
  - The search for the scepter isn't implemented yet.
- - The perks aren't implemented yet.
+ - The perks aren't fully implemented yet.
+ - Once unlocked, you can meet the new strains in the regular rabbit encounter.
+ - Brute win scene added, written by QB/LD.
 
 --------------------------------------------
              PREVIOUS VERSIONS
